[gd_scene load_steps=2 format=3 uid="uid://5cx6fh1ofdk7"]

[ext_resource type="Script" path="res://modify_elements.gd" id="1_24uvr"]

[node name="modify_elements" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_24uvr")

[node name="return" type="Button" parent="."]
layout_mode = 0
offset_left = 484.0
offset_top = 396.0
offset_right = 542.0
offset_bottom = 427.0
text = "return"

[node name="save" type="Button" parent="."]
offset_left = 496.0
offset_top = 353.0
offset_right = 539.0
offset_bottom = 384.0
text = "save"

[node name="Elements_Container" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 255.0
offset_top = 66.0
offset_right = 767.0
offset_bottom = 317.0

[node name="VBoxContainer" type="VBoxContainer" parent="Elements_Container"]
layout_mode = 2

[connection signal="pressed" from="return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="save" to="." method="_on_save_pressed"]
